minor logo bg colour correction for visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4256,8 +4256,8 @@ body.is-preload #banner p {
   background-color: rgb(191, 173, 207);
   background-image: linear-gradient(
     to right,
-    rgba(137, 116, 170, 0.8),
-    rgba(225, 229, 252, 0.8)
+    rgba(124, 152, 247, 0.8),
+    rgba(225, 229, 252, 0.979)
   );
   padding: 10px;
   border-radius: 5%;
